# GuruxDLMS.c

./: .gitignore  CMakeLists.txt  CREDITS.md  Full_API_Specification_RU.md  README.md  SPECIFICATION.md  exchange.h  hal_errors.h  hal_nvm.h  hal_timers.h  hal_transport.h
.github/workflows/: codeql-analysis.yml  semgrep.yml
Arduino_IDE/: readme.md
Arduino_IDE/client/: ArduinoIgnore.h  GXDLMSClient.cpp  GXDLMSClient.h  client.ino
Arduino_IDE/pushListener/: ArduinoIgnore.h  GXDLMSNotify.cpp  GXDLMSNotify.h  pushListener.ino  readme.md
Arduino_IDE/server/: ArduinoIgnore.h  GXDLMSServer.cpp  GXDLMSServer.h  server.ino
Arduino_IDE/server/include/: bitarray.h  bytebuffer.h  cipheringenums.h  cosem.h  date.h  dlms.h  enums.h  gxarray.h  gxget.h  gxinvoke.h  gxset.h  lnparameters.h  objectarray.h  snparameters.h
Arduino_IDE/server/src/: bitarray.c  ciphering.c  converters.c  date.c  dlms.c  dlmsSettings.c  gxget.c  gxinvoke.c  gxmd5.c  gxobjects.c  gxset.c  gxsha1.c  gxsha256.c  notify.c  replydata.c
Atmel/: readme.md
Atmel/AtMega2560/GuruxDLMSServerExample/: readme.md  (+1 more)
Espressif/: readme.md
Espressif/GuruxDLMSServerExample/: CMakeLists.txt  Kconfig.projbuild  partitions.csv  sdkconfig
GuruxDLMSClientExample/: makefile
GuruxDLMSClientExample/VS/: GuruxDLMSClientExample.sln  GuruxDLMSClientExample.vcxproj  GuruxDLMSClientExample.vcxproj.filters
GuruxDLMSClientExample/include/: communication.h  connection.h  getopt.h
GuruxDLMSClientExample/src/: communication.c  connection.c  getopt.c  main.c
GuruxDLMSDataCollector/: README.md
GuruxDLMSDataCollector/Development/: makefile
GuruxDLMSDataGateway/: README.md
GuruxDLMSDataGateway/Development/: makefile
GuruxDLMSPushExample/: makefile
GuruxDLMSPushExample/VS/: GuruxDLMSPushExample.sln  GuruxDLMSPushExample.vcxproj  GuruxDLMSPushExample.vcxproj.filters
GuruxDLMSPushExample/include/: connection.h
GuruxDLMSPushExample/src/: connection.c  main.c
GuruxDLMSServerExample/: CMakeLists.txt  makefile  readme.md
GuruxDLMSServerExample/VS/: GuruxDLMSServerExample.sln  GuruxDLMSServerExample.vcxproj  GuruxDLMSServerExample.vcxproj.filters
GuruxDLMSServerExample/include/: connection.h  exampleserver.h
GuruxDLMSServerExample/src/: connection.c  exampleserver.c  main.c
GuruxDLMSServerExample/src/exampleserver/: exampleserver.c
GuruxDLMSServerExample2/: makefile
GuruxDLMSServerExample2/VS/: GuruxDLMSServerExample2.sln  GuruxDLMSServerExample2.vcxproj  GuruxDLMSServerExample2.vcxproj.filters
GuruxDLMSServerExample2/include/: connection.h  exampleserver.h
GuruxDLMSServerExample2/src/: connection.c  exampleserver.c  main.c
GuruxDLMSSimpleServerExample/: makefile  readme.md
GuruxDLMSSimpleServerExample/VS/: GuruxDLMSSimpleServerExample.sln  GuruxDLMSSimpleServerExample.vcxproj  GuruxDLMSSimpleServerExample.vcxproj.filters
GuruxDLMSSimpleServerExample/src/: main.c
GuruxDLMSSimpleServerExample2/: makefile  readme.md
GuruxDLMSSimpleServerExample2/VS/: GuruxDLMSSimpleServerExample2.sln  GuruxDLMSSimpleServerExample2.vcxproj  GuruxDLMSSimpleServerExample2.vcxproj.filters
GuruxDLMSSimpleServerExample2/src/: main.c
NordicSemiconductor/: readme.md
NordicSemiconductor/GuruxDLMSServerExample/: CMakeLists.txt  prj.conf  readme.md  sample.yaml
NordicSemiconductor/GuruxDLMSSimpleServerExample2/: CMakeLists.txt  README.rst  prj.conf  readme.md  sample.yaml
development/: CMakeLists.txt  makefile
development/VS/: GuruxDLMS.c.sln  GuruxDLMS.c.vcxproj  GuruxDLMS.c.vcxproj.filters
development/dlms_cosem/: Cargo.toml  README.md
development/dlms_cosem/src/: crc.rs  error.rs  lib.rs  reply_data.rs  variant.rs
development/dlms_cosem/src/client/: mod.rs
development/dlms_cosem/src/objects/: cosem.rs  mod.rs
development/dlms_cosem/src/security/: high_gmac.rs  mod.rs
development/dlms_cosem/src/server/: mod.rs
development/dlms_cosem/src/transport/: framing.rs  hdlc.rs  mod.rs  wrapper.rs
development/dlms_cosem/src/types/: enums.rs  mod.rs  settings.rs
development/dlms_cosem_rs/: Cargo.toml  README.md
development/dlms_cosem_rs/src/: error.rs  lib.rs
development/dlms_cosem_rs/src/client/: mod.rs
development/dlms_cosem_rs/src/objects/: mod.rs
development/dlms_cosem_rs/src/security/: aes_gcm.rs  ecdsa.rs  keys.rs  mod.rs
development/dlms_cosem_rs/src/server/: mod.rs
development/dlms_cosem_rs/src/transport/: mod.rs
development/dlms_cosem_rs/src/types/: buffer.rs  codec.rs  mod.rs  object.rs  settings.rs  value.rs
development/include/: apdu.h  asn1Parser.h  bigInteger.h  bitarray.h  bytebuffer.h  ciphering.h  client.h  converters.h  cosem.h  crc.h  curve.h  datainfo.h  date.h  dlms.h  dlmssettings.h  eccPoint.h  enums.h  errorcodes.h  gx-conf.h  gx509Certificate.h  gxPkcs10.h  gxaes.h  gxarray.h  gxdefine.h  gxecdsa.h  gxget.h  gxignore.h  gxint.h  gxinvoke.h  gxkey.h  gxmem.h  gxobjects.h  gxserializer.h  gxset.h  gxsetignoremalloc.h  gxsetmalloc.h  gxsha384.h  gxvalueeventargs.h  helpers.h  lnparameters.h  (+12 more)
development/src/: apdu.c  asn1Parser.c  bigInteger.c  bitarray.c  bytebuffer.c  ciphering.c  client.c  converters.c  cosem.c  curve.c  datainfo.c  date.c  dlms.c  dlmsSettings.c  eccPoint.c  gx509Certificate.c  gxPkcs10.c  gxaes.c  gxarray.c  gxecdsa.c  gxget.c  gxinvoke.c  gxkey.c  gxmd5.c  gxobjects.c  gxserializer.c  gxset.c  gxsetignoremalloc.c  gxsetmalloc.c  gxsha1.c  gxsha256.c  gxsha384.c  gxvalueeventargs.c  helpers.c  message.c  notify.c  objectarray.c  parameters.c  privateKey.c  publicKey.c  (+5 more)
dlms_cose_rs/src/: dlms.rs
dlms_cosem_rs/: Cargo.toml  src.apdu.rs
dlms_cosem_rs/examples/: client.rs
dlms_cosem_rs/src/: apdu.rs  asn1.rs  axdr.rs  bit_array.rs  byte_buffer.rs  client.rs  converters.rs  cosem.rs  crypto.rs  dlms.rs  enums.rs  helpers.rs  lib.rs  server.rs  variant.rs
dlms_cosem_rs/src/cosem/: clock.rs  data.rs  mod.rs  register.rs
dlms_cosem_rs/srcp/: apdu.rs
dlms_cosem_rs/srcs/: apdu.rs
dlms_cosem_rs/tests/: byte_buffer_test.rs
mbed/: readme.md
mbed/GuruxDLMSClientExample/: .mbed  main.cpp
mbed/GuruxDLMSServerExample/: .mbed  main.cpp
(+296 files in other folders)
