[package]
name = "dlms_cosem_rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings and utilities for Gurux DLMS/COSEM tooling."
authors = ["Gurux DLMS Contributors"]
license = "GPL-2.0-or-later"
repository = "https://github.com/Gurux/GuruxDLMS.c"
readme = "README.md"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = []
# Enables serde serialization support for the strongly typed DLMS helpers.
serde = ["dep:serde", "dep:serde_bytes"]
dlms_ignore_account = []
dlms_ignore_action = []
dlms_ignore_action_schedule = []
dlms_ignore_activity_calendar = []
dlms_ignore_aes = []
dlms_ignore_arbitrator = []
dlms_ignore_array_manager = []
dlms_ignore_association_logical_name = []
dlms_ignore_association_short_name = []
dlms_ignore_auto_answer = []
dlms_ignore_auto_connect = []
dlms_ignore_charge = []
dlms_ignore_client = []
dlms_ignore_clock = []
dlms_ignore_compact_data = []
dlms_ignore_conpact_data = []
dlms_ignore_credit = []
dlms_ignore_data = []
dlms_ignore_data_protection = []
dlms_ignore_delta = []
dlms_ignore_demand_register = []
dlms_ignore_directory = []
dlms_ignore_disconnect_control = []
dlms_ignore_event = []
dlms_ignore_extended_register = []
dlms_ignore_float32 = []
dlms_ignore_float64 = []
dlms_ignore_function_control = []
dlms_ignore_g3_plc_6lo_wpan = []
dlms_ignore_g3_plc_mac_layer_counters = []
dlms_ignore_g3_plc_mac_setup = []
dlms_ignore_general_ciphering = []
dlms_ignore_gprs_setup = []
dlms_ignore_gsm_diagnostic = []
dlms_ignore_hdlc = []
dlms_ignore_hdlc_check = []
dlms_ignore_high_aes = []
dlms_ignore_high_ecdsa = []
dlms_ignore_high_gmac = []
dlms_ignore_high_gmac1 = []
dlms_ignore_high_md5 = []
dlms_ignore_high_sha1 = []
dlms_ignore_high_sha256 = []
dlms_ignore_high_sha384 = []
dlms_ignore_iec = []
dlms_ignore_iec_8802_llc_type1_setup = []
dlms_ignore_iec_8802_llc_type2_setup = []
dlms_ignore_iec_8802_llc_type3_setup = []
dlms_ignore_iec_hdlc_setup = []
dlms_ignore_iec_local_port_setup = []
dlms_ignore_iec_twisted_pair_setup = []
dlms_ignore_image_transfer = []
dlms_ignore_ip4_setup = []
dlms_ignore_ip6_setup = []
dlms_ignore_limiter = []
dlms_ignore_llc_sscs_setup = []
dlms_ignore_lte_monitoring = []
dlms_ignore_mac_address_setup = []
dlms_ignore_malloc = []
dlms_ignore_mbus_client = []
dlms_ignore_mbus_diagnostic = []
dlms_ignore_mbus_master_port_setup = []
dlms_ignore_mbus_port_setup = []
dlms_ignore_mbus_slave_port_setup = []
dlms_ignore_modem_configuration = []
dlms_ignore_notify = []
dlms_ignore_ntp_setup = []
dlms_ignore_object_pointer1s = []
dlms_ignore_object_pointers = []
dlms_ignore_parameter_monitor = []
dlms_ignore_plc = []
dlms_ignore_ppp_setup = []
dlms_ignore_prime_nb_ofdm_plc_applications_identification = []
dlms_ignore_prime_nb_ofdm_plc_mac_counters = []
dlms_ignore_prime_nb_ofdm_plc_mac_functional_parameters = []
dlms_ignore_prime_nb_ofdm_plc_mac_network_administration_data = []
dlms_ignore_prime_nb_ofdm_plc_mac_setup = []
dlms_ignore_prime_nb_ofdm_plc_physical_layer_counters = []
dlms_ignore_profile_generic = []
dlms_ignore_push_setup = []
dlms_ignore_register = []
dlms_ignore_register_activation = []
dlms_ignore_register_monitor = []
dlms_ignore_register_table = []
dlms_ignore_sap_assignment = []
dlms_ignore_schedule = []
dlms_ignore_script_auto_answer = []
dlms_ignore_script_auto_connect = []
dlms_ignore_script_table = []
dlms_ignore_security_setup = []
dlms_ignore_serializer = []
dlms_ignore_server = []
dlms_ignore_set = []
dlms_ignore_sfsk_active_initiator = []
dlms_ignore_sfsk_mac_counters = []
dlms_ignore_sfsk_mac_synchronization_timeouts = []
dlms_ignore_sfsk_phy_mac_setup = []
dlms_ignore_sfsk_reporting_system_list = []
dlms_ignore_smtp_setup = []
dlms_ignore_special_days_table = []
dlms_ignore_status_mapping = []
dlms_ignore_string_converter = []
dlms_ignore_tcp_udp_setup = []
dlms_ignore_token_gateway = []
dlms_ignore_utility_tables = []
dlms_ignore_wireless_mbus = []
dlms_ignore_wireless_mode_q_channel = []
dlms_ignore_wrapper = []
dlms_ignore_zig_bee_network_control = []
dlms_ignore_zig_bee_sas_aps_fragmentation = []
dlms_ignore_zig_bee_sas_join = []
dlms_ignore_zig_bee_sas_startup = []

[dependencies]
bitflags = "2.4"
bytes = "1.5"
aes-gcm = { version = "0.10", default-features = false, features = ["aes", "std"] }
digest = "0.10"
elliptic-curve = { version = "0.13", features = ["sec1"] }
p256 = { version = "0.13", features = ["ecdsa"] }
p384 = { version = "0.13", features = ["ecdsa"] }
rand = { version = "0.8", default-features = false, features = ["std"] }
rand_core = "0.6"
sha2 = "0.10"
sha3 = "0.10"
signature = "2.2"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_bytes = { version = "0.11", optional = true }

[dev-dependencies]
rand_chacha = { version = "0.3", default-features = false, features = ["std"] }
